# atomworks_plug_and_play

./: .gitignore  LICENSE  cli.py  config.py  run.py
atw_pp/: README.md  pyproject.toml
atw_pp/atw_pp/: __init__.py  cli.py  config.py  run.py
atw_pp/atw_pp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
atw_pp/atw_pp/core/: contacts.py
atw_pp/atw_pp/examples/: default.ipynb
atw_pp/atw_pp/examples/default_input/antibody_antigen_pdb/: README.md
atw_pp/atw_pp/examples/default_output/: all_metadata.parquet  chains_metadata.parquet  interfaces_metadata.parquet  roles_metadata.parquet  structures_metadata.parquet
atw_pp/atw_pp/io/: __init__.py  cif.py  params.py
atw_pp/atw_pp/plugins/: base.py  chain_continuity.py  interface_contacts.py  ipsae.py  paragraph_paratope.py
atw_pp/atw_pp/scripts/: run_metadata.py
atw_pp/atw_pp/tables/: wide.py
core/: __init__.py  annotations.py  epitope.py  selection.py
io/: __init__.py  cif.py  paragraph.py
plugins/: __init__.py  chain_continuity.py  identity.py
tables/: __init__.py
